--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="https://via.placeholder.com/400x500" alt="About Me">
+                    <img src="https://images.unsplash.com/photo-1602992708529-c9fdb12905c9?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGRldmVsb3BlcnxlbnwwfHwwfHx8MA%3D%3D" alt="Professional Photo">
+
                 </div>
             </div>
         </div>
